Fix issue 17, 'Add to Group', 'Manage Filters' and 'Edit Profile' modals fully visible.

--- a/client/src/components/AddToGroupModal/style.module.scss
+++ b/client/src/components/AddToGroupModal/style.module.scss
@@ -44,7 +44,7 @@
 
 .groups {
   margin: 0 -30px;
-  max-height: 150px;
+  max-height: calc(95vh - 157px);
   overflow-y: auto;
 }
 
@@ -68,10 +68,12 @@
 .searchRow {
   display: flex;
   position: relative;
+  margin: 0 30px;
 }
 
 .subTitle {
   @include h3;
+  margin-left: 30px;
 }
 
 .title {
