--- a/client/src/components/ProfileCard/profileCard.module.css
+++ b/client/src/components/ProfileCard/profileCard.module.css
@@ -7,6 +7,7 @@
 .profileCard {
   width: 370px;
   min-height: 326px;
+  max-height: inherit;
   margin: 10px;
 
   border: 1px solid gray1_025;
@@ -145,6 +146,8 @@
   align-self: flex-end;
   border-top: 1px solid gray1_025;
   min-height: 97px;
+  overflow-y: auto;
+  overflow-x: hidden;
   width: 100%;
 }
 
